versioned_docs/version-1.10.x/http-api/entry-api.mdx
---
sidebar_position: 4
title: Entry API
description: The Entry API allows users to write and read data from their buckets, as well as search for specific entries using query operations.
---

<head>
  <link
    rel="canonical"
    href="https://www.reduct.store/docs/http-api/entry-api"
  />
</head>

import SwaggerComponent from "@site/src/components/docs/SwaggerComponent";

# Entry API Specification Reference

The Entry API allows users to write and read data from their buckets, as well as search for specific entries using query operations.

<SwaggerComponent
  method="POST"
  path="/api/v1/b/:bucket_name/:entry_name"
  summary="Write a record to an entry"
  description={
    <>
      ReductStore creates an entry on the first write operation. The record
      should be placed in the body of the HTTP request. The body can also be
      empty.
      <br />
      <br />
      The method needs a valid API token with write access to the entry's bucket
      if authentication is enabled.
      <br />
      <br />
      The endpoint can be used with the "Expect: 100-continue" header. If the
      header is not set and an error occurs on the database side, the database
      drains the sent body and returns an HTTP status.
      <br />
      <br />
      Since version 1.3, the database supports labels. You can assign any number
      of labels to a record by using headers that start with{" "}
      <code>x-reduct-label-</code>.
    </>
  }
  parameters={[
    {
      type: "path",
      details: {
        name: ":bucket_name",
        description: "Name of bucket",
        isRequired: true,
      },
    },
    {
      type: "path",
      details: {
        name: ":entry_name",
        description: "Name of entry",
        isRequired: true,
      },
    },
    {
      type: "query",
      details: {
        name: "ts",
        dataType: "Integer",
        description: "A UNIX timestamp in microseconds",
        isRequired: true,
      },
    },
    {
      type: "header",
      details: {
        name: "Content-Length",
        description:
          "Content-length is required to start an asynchronous write operation",
        isRequired: true,
      },
    },
    {
      type: "header",
      details: {
        name: "x-reduct-label-<name>",
        description: "A value of a label assigned to the record",
        isRequired: false,
      },
    },
  ]}
  responses={[
    {
      status: "200",
      message: "OK",
      summary: "The record is written",
      description: (
        <pre>
          <code>{`{
    // Response
}`}</code>
        </pre>
      ),
    },
    {
      status: "400",
      message: "Bad Request",
      summary: "Posted content bigger or smaller than content-length",
    },
    {
      status: "401",
      message: "Unauthorized",
      summary: "Access token is invalid or empty",
    },
    {
      status: "403",
      message: "Forbidden",
      summary: "Access token does not have write permissions",
    },
    {
      status: "404",
      message: "Not Found",
      summary: "Bucket is not found",
    },
    {
      status: "409",
      message: "Conflict",
      summary: "A record with the same timestamp already exists",
    },
    {
      status: "422",
      message: "Unprocessable Entity",
      summary: "Bad timestamp",
    },
  ]}
/>

<SwaggerComponent
  method="POST"
  path="/api/v1/b/:bucket_name/:entry_name/batch"
  summary="Write batch of records"
  description={
    <>
      This method allows multiple records to be written in a single request. A
      client should describe the records in headers in the following format:
      <br />
      <code>
        x-reduct-time-: &lt;CONTENT_LENGTH&gt;,&lt;CONTENT_TYPE&gt;,
        [LABEL=VALUE]
      </code>
      <br />
      <br />
      For example:{" "}
      <code>x-reduct-time-192312381273: 100,text/plain,x=y,a="[a,b]"</code>
      <br />
      <br />
      The body must contain the concatenated records sorted by timestamp. The
      method returns an HTTP error if the header format or data length is
      incorrect. It also returns an individual status and error message for each
      record if the write operation fails:
      <br />
      <code>x-reduct-error-: &lt;STATUS_CODE&gt;,&lt;ERROR_MESSAGE&gt;.</code>
    </>
  }
  responses={[
    {
      status: "200",
      message: "OK",
      summary:
        "The request was valid. However, some records may not be written. Check headers.",
    },
    {
      status: "400",
      message: "Bad Request",
      summary: "Posted content bigger or smaller than content-length",
    },
    {
      status: "401",
      message: "Unauthorized",
      summary: "Access token is invalid or empty",
    },
    {
      status: "403",
      message: "Forbidden",
      summary: "Access token does not have write permissions",
    },
    {
      status: "404",
      message: "Not Found",
      summary: "Bucket is not found",
    },
    {
      status: "422",
      message: "Unprocessable Entity",
      summary: "Bad timestamp or header format",
    },
  ]}
/>

<SwaggerComponent
  method="GET"
  path="/api/v1/b/:bucket_name/:entry_name"
  summary="Get a record from an entry"
  fullWidth={false}
  description={
    <>
      The method finds a record for the given timestamp and sends its content in
      the HTTP response body. It also sends additional information in headers:
      <br />
      <strong>x-reduct-time</strong> - UNIX timestamp of the record in
      microseconds
      <br />
      <strong>x-reduct-last</strong> - 1 - if a record is the last record in the
      query (deprecated since version 1.4, use NoContent response)
      <br />
      <strong>x-reduct-label-&lt;name&gt;</strong> - a value of the &lt;name&gt;
      label
      <br />
      If authentication is enabled, the method needs a valid API token with read
      access to the entry's bucket.
      <br />
      Since version 1.3, the database supports labels. If a record has some
      labels, the method sends them as headers that start with{" "}
      <code>x-reduct-label</code>.
    </>
  }
  parameters={[
    {
      type: "path",
      details: {
        name: ":bucket_name",
        isRequired: true,
        description: "Name of bucket",
      },
    },
    {
      type: "query",
      details: {
        name: "q",
        isRequired: false,
        description: (
          <>
            A query ID to read the next record in the query. If it is set, the
            parameter
            <br />
            <code>ts</code>
            <br />
            is ignored.
          </>
        ),
      },
    },
    {
      type: "path",
      details: {
        name: ":entry_name",
        isRequired: true,
        description: "Name of entry",
      },
    },
    {
      type: "query",
      details: {
        name: "ts",
        isRequired: false,
        description:
          "A UNIX timestamp in microseconds. If it is empty, the latest record is returned.",
      },
    },
  ]}
  responses={[
    {
      status: "200",
      message: "OK",
      summary: "The record is found and returned in body of the response",
      description: (
        <>
          <code>"string"</code>
        </>
      ),
    },
    {
      status: "204",
      message: "No Content",
      summary: "If there is no record available for the given query",
    },
    {
      status: "401",
      message: "Unauthorized",
      summary: "Access token is invalid or empty",
    },
    {
      status: "403",
      message: "Forbidden",
      summary: "Access token doesn",
    },
    {
      status: "404",
      message: "Not Found",
      summary: "The bucket or record with the timestamp doesn",
    },
    {
      status: "422",
      message: "Unprocessable Entity",
      summary: "Bad timestamp",
    },
  ]}
/>

<SwaggerComponent
  method="HEAD"
  path="/api/v1/b/:bucket_name/:entry_name"
  summary="Get only meta information about record"
  description={
    <>
      The endpoint works exactly as
      <br />
      <code>GET /api/v1/b/:bucket_name/:entry_name</code>
      <br />
      but returns only headers with meta information with a body.
    </>
  }
/>

<SwaggerComponent
  method="GET"
  path="/api/v1/b/:bucket_name/:entry_name/batch"
  summary="Get a bulk of records from an entry"
  description={
    <>
      Since version 1.5, ReductStore provides a way to read multiple records in
      a request. This can improve latency when you have many small records to
      read. The endpoint sorts all the records by time and concatenates them
      into a blob and sends it in the body. The meta information is sent for
      each record as a separate header{" "}
      <code>x-reduct-time-&lt;timestamp&gt;</code> which has a value as a CSV
      row. An example:
      <br />
      <code>x-reduct-time-192312381273: 100,text/plain,x=y,a="[a,b]"</code>
      <br />
      The first value is content-length, the second one is content-type, then
      labels as key=value pairs. If there is a comma in the value, it is escaped
      with double quotes.
    </>
  }
  parameters={[
    {
      type: "path",
      details: {
        name: ":bucket_name",
        description: "Name of bucket",
        isRequired: true,
      },
    },
    {
      type: "query",
      details: {
        name: "q",
        dataType: "Integer",
        description: "A query ID to read the next record in the query",
        isRequired: true,
      },
    },
    {
      type: "path",
      details: {
        name: ":entry_name",
        isRequired: true,
        description: "Name of entry",
      },
    },
  ]}
  responses={[
    {
      status: "200",
      message: "OK",
      summary: "The record is found and returned in body of the response",
      description: (
        <>
          <code>"string"</code>
        </>
      ),
    },
    {
      status: "204",
      message: "No Content",
      summary: "If there is no record available for the given query",
    },
    {
      status: "401",
      message: "Unauthorized",
      summary: "Access token is invalid or empty",
    },
    {
      status: "403",
      message: "Forbidden",
      summary: "Access token doesn",
    },
    {
      status: "404",
      message: "Not Found",
      summary: "The bucket or record with the timestamp doesn",
    },
    {
      status: "422",
      message: "Unprocessable Entity",
      summary: "Bad timestamp",
    },
  ]}
/>

<SwaggerComponent
  method="HEAD"
  path="/api/v1/b/:bucket_name/:entry_name/batch"
  summary="Get only meta information in bulk"
  description={
    <>
      The endpoint works exactly as
      <br />
      <code>GET /api/v1/b/:bucket_name/:entry_name/batch</code>
      <br />
      but returns only headers with meta information with a body.
    </>
  }
/>

<SwaggerComponent
  method="GET"
  path="/api/v1/b/:bucket_name/:entry_name/q"
  summary="Query records for a time interval"
description={
  <>
    The method responds with a JSON document containing an ID which should be used to read records with the following endpoint:
      <p>
        <strong>GET /b/:bucket_name/:entry_name?q=ID.</strong>
      </p>
    The time interval is [start, stop).
    <br />
    If authentication is enabled, the method needs a valid API token with read access to the bucket of the entry.
    <br /><br />
    <strong> Changes: </strong>
    <ul>
        <li>
            Version 1.3: the method also provides the <code>include-&lt;label&gt;</code> and <code>exclude-&lt;label&gt;</code> query parameters to filter records based on the values of certain labels. For example:
            <p>
                <strong>GET /api/v1/:bucket/:entry/q?include-&lt;label1&gt;=foo&amp;exclude-&lt;label2&gt;=bar</strong>
            </p>
            This would find all records that have <code>label1</code> equal to "foo" and excludes those that have <code>label2</code> equal to "bar".
            <br />
            A user can specify multiple <code>include</code> and <code>exclude</code> labels, which will be connected with an AND operator. For example:
            <p>
                <strong>GET /api/v1/:bucket/:entry/q?include-&lt;label1&gt;=foo&amp;include-&lt;label2&gt;=bar</strong>
            </p>
        </li>
    <li>
            Version 1.4: the method has the <code>continuous query</code> flag. If it is true, the current query will not be discarded if there are no records. A client can ask them later. The query will not be removed until its TTL has expired. The <code>stop</code> parameter is ignored for continuous queries.
    </li>
    <li>
            Version 1.6: the method provides the <code>limit</code> query parameter. It limits the number of records in the query. If it is not set, the query is unlimited by default.
    </li>
    <li>
            Version 1.10: the method has the <code>each_n</code> and <code>each_s</code> query parameters. If the <code>each_n</code> parameter is set, the method returns only every <code>each_n</code>-th record. If the <code>each_s</code> parameter is set, the method returns only one record per <code>each_s</code> seconds.
    </li>
    </ul>
    <br /><br />
  </>
}
  parameters={[
    {
      type: "path",
      details: {
        name: ":bucket_name",
        description: "Name of bucket",
        isRequired: true,
      }
    },
    {
      type: "query",
      details: {
        name: "start",
        description: "A UNIX timestamp in microseconds. If not set, the query starts from the oldest record in the entry.",
        dataType: "Integer",
        isRequired: false,
      }
    },
    {
      type: "query",
      details: {
        name: "stop",
        description: "A UNIX timestamp in microseconds. If not set, the query starts from the latest record in the entry.",
        dataType: "Integer",
        isRequired: false,
      }
    },
    {
      type: "path",
      details: {
        name: ":entry_name",
        description: "Name of entry",
        isRequired: true,
      }
    },
    {
      type: "query",
      details: {
        name: "ttl",
        description: "Time To Live of the query in seconds. If a client haven't read any record for this time interval, the server removes the query and the query ID becomes invalid. Default value 5 seconds.",
        dataType: "Integer",
        isRequired: false,
      }
    },
    {
      type: "query",
      details: {
        name: "include-<label name>",
        description: "Query records that have a certain value of a label.",
        isRequired: false,
      }
    },
    {
      type: "query",
      details: {
        name: "exclude-<label name>",
        description: "Query records that don't have a certain value of a label.",
        isRequired: false,
      }
    },
    {
      type: "query",
      details: {
        name: "conitnuous",
        description: "Keep query if no records for the request",
        dataType: "Boolean",
        isRequired: false,
      }
    },
    {
      type: "query",
      details: {
          name: "limit",
          description: "Maximum number of records in the query. Default: unlimited.",
          dataType: "Integer",
          isRequired: false,
      }
    },
    {
      type: "query",
      details: {
          name: "each_n",
          description: "Return only every N-th record",
          dataType: "Integer",
          isRequired: false,
      }
    },
      {
      type: "query",
      details: {
          name: "each_s",
          description: "Return only one record per S seconds",
          dataType: "Float",
          isRequired: false,
      }
    }

]}
responses={[
{
status: "200",
message: "OK",
description: (

<pre>
  <code>{`{
"id": "integer" // ID of query which can be used in GET /b/:bucket/:entry request
}`}</code>
</pre>

)
},
{
status: "204",
message: "No Content",
summary: "No records for the time interval"
},
{
status: "401",
message: "Unauthorized",
summary: "Access token is invalid or empty"
},
{
status: "403",
message: "Forbidden",
summary: "Access token doesn't have the required permissions"
},
{
status: "404",
message: "Not Found",
summary: "The bucket or entry doesn't exist"
},
{
status: "422",
message: "Unprocessable Entity",
summary: "One or both timestamps are bad, or TTL is not a number"
}
]}
/>

<SwaggerComponent
  method="DELETE"
  path="/api/v1/b/:bucket_name/:entry_name"
  summary="Remove entry"
  description={
    <>
      Since v1.6, you can remove a specific entry from a bucket with the entire
      history of its records.
    </>
  }
  responses={[
    {
      status: "200",
      message: "OK",
      summary: "The entry has been removed",
    },
    {
      status: "401",
      message: "Unauthorized",
      summary: "Access token is invalid or empty",
    },
    {
      status: "403",
      message: "Forbidden",
      summary: "Access token doesn't have the necessary permissions",
    },
    {
      status: "404",
      message: "Not Found",
      summary: "The bucket or entry doesn't exist",
    },
  ]}
/>
